使用 CLI 创建了第二个组件 HeroesComponent。 把 HeroesComponent 添加到了壳组件 AppComponent 中，以便显示它。 使用 UppercasePipe 来格式化英雄的名字。 用 ngModel 指令实现了双向数据绑定。 知道了 AppModule。 把 FormsModule 导入了 AppModule，以便 Angular 能识别并应用 ngModel 指令。 知道了把组件声明到 AppModule 是很重要的，并认识到 CLI 会自动帮你声明它。

--- a/src/app/heros/heros.component.html
+++ b/src/app/heros/heros.component.html
@@ -1,3 +1,10 @@
 <p>
-  heros works!
+  {{hero.name | uppercase}} 安安
 </p>
+<div><span>id: </span>{{hero.id}}</div>
+<div><span>name: </span>{{hero.name}}</div>
+<div>
+  <label>name:
+    <input [(ngModel)]="hero.name" placeholder="name">
+  </label>
+</div>
