英雄指南应用在一个主从视图中显示了英雄列表。 用户可以选择一个英雄，并查看该英雄的详情。 使用 *ngFor 显示了一个列表。 使用 *ngIf 来根据条件包含或排除了一段 HTML。 可以用 class 绑定来切换 CSS 的样式类。

--- a/src/app/heros/heros.component.html
+++ b/src/app/heros/heros.component.html
@@ -1,10 +1,21 @@
-<p>
-  {{hero.name | uppercase}} 安安
-</p>
-<div><span>id: </span>{{hero.id}}</div>
-<div><span>name: </span>{{hero.name}}</div>
+<h2>英雄列表</h2>
 <div>
-  <label>name:
-    <input [(ngModel)]="hero.name" placeholder="name">
-  </label>
+
+  <ul class="heroes">
+    <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </li>
+  </ul>
+
+</div>
+<div *ngIf="selectedHero">
+
+  <h2>{{selectedHero.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{selectedHero.id}}</div>
+  <div>
+    <label>name:
+      <input [(ngModel)]="selectedHero.name" placeholder="name">
+    </label>
+  </div>
+
 </div>
